// Vitest Snapshot v1

exports[`TidligstMuligeUttak > oppdaterer valgt knapp og tegner graph når brukeren klikker på en knapp 1`] = `
<DocumentFragment>
  <p
    class="_paragraph_d3b588 navds-body-long"
  >
    Du kan tidligst ta ut alderspensjon når du er 62 år og 10 måneder. Hvis du går av senere, får du høyere pensjon i året.
  </p>
  <div
    class="navds-read-more navds-read-more--medium"
  >
    <button
      aria-expanded="false"
      class="navds-read-more__button navds-body-short"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="navds-read-more__expand-icon"
        fill="none"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M12 17.414 4.293 9.707l1.414-1.414L12 14.586l6.293-6.293 1.414 1.414L12 17.414Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="navds-read-more__expand-icon navds-read-more__expand-icon--filled"
        fill="none"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="m12 18.121-8.06-8.06 2.12-2.122L12 13.88l5.94-5.94 2.12 2.122L12 18.12Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      <span>
        Hva avgjør tidligste uttakstidspunkt?
      </span>
    </button>
    <div
      style="height: 0px; overflow: hidden;"
    >
      <div
        aria-hidden="true"
        style="display: none;"
      >
        <div
          class="navds-read-more__content navds-body-long"
        >
          //TODO
        </div>
      </div>
    </div>
  </div>
  <h2
    class="navds-heading navds-heading--xsmall"
  >
    Når vil du ta ut alderspensjon?
  </h2>
  <ul
    class="navds-chips _chipsWrapper_d3b588 _chipsWrapper__hasGap_d3b588 navds-chips--medium navds-body-short navds-body-short--small"
  >
    <li>
      <button
        aria-pressed="false"
        class="navds-chips__chip navds-chips__toggle"
      >
        <span
          class="navds-chips__chip-text"
        >
          62 år og 10 md.
        </span>
      </button>
    </li>
    <li>
      <button
        aria-pressed="false"
        class="navds-chips__chip navds-chips__toggle"
      >
        <span
          class="navds-chips__chip-text"
        >
          63 år
        </span>
      </button>
    </li>
    <li>
      <button
        aria-pressed="false"
        class="navds-chips__chip navds-chips__toggle"
      >
        <span
          class="navds-chips__chip-text"
        >
          64 år
        </span>
      </button>
    </li>
    <li>
      <button
        aria-pressed="false"
        class="navds-chips__chip navds-chips__toggle"
      >
        <span
          class="navds-chips__chip-text"
        >
          65 år
        </span>
      </button>
    </li>
    <li>
      <button
        aria-pressed="false"
        class="navds-chips__chip navds-chips__toggle"
      >
        <span
          class="navds-chips__chip-text"
        >
          66 år
        </span>
      </button>
    </li>
    <li>
      <button
        aria-pressed="false"
        class="navds-chips__chip navds-chips__toggle"
      >
        <span
          class="navds-chips__chip-text"
        >
          67 år
        </span>
      </button>
    </li>
  </ul>
  <div
    class="navds-read-more navds-read-more--medium _readMore__hasPadding_d3b588 navds-read-more--open"
  >
    <button
      aria-expanded="true"
      class="navds-read-more__button navds-body-short"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="navds-read-more__expand-icon"
        fill="none"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M12 17.414 4.293 9.707l1.414-1.414L12 14.586l6.293-6.293 1.414 1.414L12 17.414Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="navds-read-more__expand-icon navds-read-more__expand-icon--filled"
        fill="none"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="m12 18.121-8.06-8.06 2.12-2.122L12 13.88l5.94-5.94 2.12 2.122L12 18.12Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      <span>
        Vis flere aldere
      </span>
    </button>
    <div
      style="height: 0px; overflow: hidden; transition: height 250ms ease 0ms;"
    >
      <div
        aria-hidden="false"
        style=""
      >
        <div
          class="navds-read-more__content navds-body-long"
        >
          <ul
            class="navds-chips _chipsWrapper_d3b588 _chipsWrapper__hasGap_d3b588 navds-chips--medium navds-body-short navds-body-short--small"
          >
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  68 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  69 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  70 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  71 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="true"
                class="navds-chips__chip navds-chips__toggle navds-chips--icon-left"
              >
                <svg
                  aria-hidden="true"
                  class="navds-chips__toggle-icon"
                  fill="none"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M18.201 6 20 7.89 8.78 19 4 14.396 5.794 12.5l2.98 2.802L18.201 6Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
                <span
                  class="navds-chips__chip-text"
                >
                  72 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  73 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  74 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  75 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  76 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  77 år
                </span>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div
    data-highcharts-chart="0"
    style="overflow: hidden;"
  >
    <div
      class="highcharts-container "
      dir="ltr"
      id="highcharts-du1dgep-0"
      style="position: relative; overflow: hidden; width: 600px; height: 400px; text-align: left; line-height: normal; z-index: 0; user-select: none; outline: none;"
    >
      <svg
        aria-label="Årlig pensjon hvis du starter uttak ved 72 år"
        class="highcharts-root"
        height="400"
        role="img"
        style="font-family: \\"Lucida Grande\\", \\"Lucida Sans Unicode\\", Arial, Helvetica, sans-serif; font-size: 12px;"
        version="1.1"
        viewBox="0 0 600 400"
        width="600"
        xmlns="http://www.w3.org/2000/svg"
      >
        <desc>
          Created with Highcharts 10.3.3
        </desc>
        <defs>
          <clippath
            id="highcharts-du1dgep-1-"
          >
            <rect
              fill="none"
              height="NaN"
              width="NaN"
              x="0"
              y="0"
            />
          </clippath>
          <clippath
            id="highcharts-du1dgep-8-"
          >
            <rect
              fill="none"
              height="NaNNaNNaNNaN"
              width="NaNNaNNaNNaN"
              x="0"
              y="0"
            />
          </clippath>
        </defs>
        <rect
          class="highcharts-background"
          fill="#ffffff"
          height="400"
          rx="0"
          ry="0"
          width="600"
          x="0"
          y="0"
        />
        <rect
          class="highcharts-plot-background"
          fill="none"
          height="NaN"
          width="NaN"
          x="NaN"
          y="10"
        />
        <rect
          class="highcharts-plot-border"
          data-z-index="1"
          fill="none"
          height="375"
          stroke="#cccccc"
          stroke-width="0"
          width="580"
          x="10"
          y="10"
        />
        <g
          class="highcharts-grid highcharts-xaxis-grid"
          data-z-index="1"
        >
          <path
            class="highcharts-grid-line"
            d="M 0 0"
            data-z-index="1"
            fill="none"
            opacity="1"
            stroke="#e6e6e6"
            stroke-dasharray="none"
            stroke-width="0"
          />
          <path
            class="highcharts-grid-line"
            d="M 0 0"
            data-z-index="1"
            fill="none"
            opacity="1"
            stroke="#e6e6e6"
            stroke-dasharray="none"
            stroke-width="0"
          />
          <path
            class="highcharts-grid-line"
            d="M 0 0"
            data-z-index="1"
            fill="none"
            opacity="1"
            stroke="#e6e6e6"
            stroke-dasharray="none"
            stroke-width="0"
          />
          <path
            class="highcharts-grid-line"
            d="M 0 0"
            data-z-index="1"
            fill="none"
            opacity="1"
            stroke="#e6e6e6"
            stroke-dasharray="none"
            stroke-width="0"
          />
          <path
            class="highcharts-grid-line"
            d="M 0 0"
            data-z-index="1"
            fill="none"
            opacity="1"
            stroke="#e6e6e6"
            stroke-dasharray="none"
            stroke-width="0"
          />
          <path
            class="highcharts-grid-line"
            d="M 0 0"
            data-z-index="1"
            fill="none"
            opacity="1"
            stroke="#e6e6e6"
            stroke-dasharray="none"
            stroke-width="0"
          />
          <path
            class="highcharts-grid-line"
            d="M 0 0"
            data-z-index="1"
            fill="none"
            opacity="1"
            stroke="#e6e6e6"
            stroke-dasharray="none"
            stroke-width="0"
          />
        </g>
        <g
          class="highcharts-grid highcharts-yaxis-grid"
          data-z-index="1"
        >
          <path
            class="highcharts-grid-line"
            d="M 0 0"
            data-z-index="1"
            fill="none"
            opacity="1"
            stroke="#e6e6e6"
            stroke-dasharray="4,3"
            stroke-width="1"
          />
          <path
            class="highcharts-grid-line"
            d="M 0 0"
            data-z-index="1"
            fill="none"
            opacity="1"
            stroke="#e6e6e6"
            stroke-dasharray="4,3"
            stroke-width="1"
          />
          <path
            class="highcharts-grid-line"
            d="M 0 0"
            data-z-index="1"
            fill="none"
            opacity="1"
            stroke="#e6e6e6"
            stroke-dasharray="4,3"
            stroke-width="1"
          />
          <path
            class="highcharts-grid-line"
            d="M 0 0"
            data-z-index="1"
            fill="none"
            opacity="1"
            stroke="#e6e6e6"
            stroke-dasharray="4,3"
            stroke-width="1"
          />
          <path
            class="highcharts-grid-line"
            d="M 0 0"
            data-z-index="1"
            fill="none"
            opacity="1"
            stroke="#e6e6e6"
            stroke-dasharray="4,3"
            stroke-width="1"
          />
          <path
            class="highcharts-grid-line"
            d="M 0 0"
            data-z-index="1"
            fill="none"
            opacity="1"
            stroke="#e6e6e6"
            stroke-dasharray="4,3"
            stroke-width="1"
          />
          <path
            class="highcharts-grid-line"
            d="M 0 0"
            data-z-index="1"
            fill="none"
            opacity="1"
            stroke="#e6e6e6"
            stroke-dasharray="4,3"
            stroke-width="1"
          />
          <path
            class="highcharts-grid-line"
            d="M 0 0"
            data-z-index="1"
            fill="none"
            opacity="1"
            stroke="#e6e6e6"
            stroke-dasharray="4,3"
            stroke-width="1"
          />
        </g>
        <g
          class="highcharts-axis highcharts-xaxis"
          data-z-index="2"
        >
          <path
            class="highcharts-axis-line"
            d="M 0 0"
            data-z-index="7"
            fill="none"
            stroke="#ccd6eb"
            stroke-width="1"
          />
        </g>
        <g
          class="highcharts-axis highcharts-yaxis"
          data-z-index="2"
        >
          <text
            class="highcharts-axis-title"
            data-z-index="7"
            style="color: rgb(102, 102, 102); fill: #666666;"
            text-anchor="end"
            transform="translate(0,0)"
            x="NaN"
            y="-10"
          >
            Tusen kroner
          </text>
          <path
            class="highcharts-axis-line"
            d="M 0 0"
            data-z-index="7"
            fill="none"
            stroke="#ccd6eb"
            stroke-width="0"
          />
        </g>
        <g
          class="highcharts-series-group"
          data-z-index="3"
        >
          <g
            class="highcharts-series highcharts-series-0 highcharts-column-series highcharts-tracker"
            clip-path="url(#highcharts-du1dgep-8-)"
            data-z-index="0.1"
            opacity="1"
            transform="translate(NaN,10) scale(1 0.001)"
          >
            <rect
              class="highcharts-point"
              fill="#868F9C"
              height="NaN"
              opacity="1"
              stroke="#ffffff"
              stroke-width="1"
              width="NaN"
              x="NaN"
              y="NaN"
            />
            <rect
              class="highcharts-point"
              fill="#868F9C"
              height="NaN"
              opacity="1"
              stroke="#ffffff"
              stroke-width="1"
              width="NaN"
              x="NaN"
              y="NaN"
            />
            <rect
              class="highcharts-point"
              fill="#868F9C"
              height="NaN"
              opacity="1"
              stroke="#ffffff"
              stroke-width="1"
              width="NaN"
              x="NaN"
              y="NaN"
            />
            <rect
              class="highcharts-point"
              fill="#868F9C"
              height="NaN"
              opacity="1"
              stroke="#ffffff"
              stroke-width="1"
              width="NaN"
              x="NaN"
              y="NaN"
            />
            <rect
              class="highcharts-point"
              fill="#868F9C"
              height="NaN"
              opacity="1"
              stroke="#ffffff"
              stroke-width="1"
              width="NaN"
              x="NaN"
              y="NaN"
            />
            <rect
              class="highcharts-point"
              fill="#868F9C"
              height="NaN"
              opacity="1"
              stroke="#ffffff"
              stroke-width="1"
              width="NaN"
              x="NaN"
              y="NaN"
            />
          </g>
          <g
            class="highcharts-markers highcharts-series-0 highcharts-column-series"
            clip-path="none"
            data-z-index="0.1"
            opacity="1"
            transform="translate(NaN,10) scale(1 1)"
          />
          <g
            class="highcharts-series highcharts-series-1 highcharts-column-series highcharts-tracker"
            clip-path="url(#highcharts-du1dgep-8-)"
            data-z-index="0.1"
            opacity="1"
            transform="translate(NaN,10) scale(1 0.001)"
          >
            <rect
              class="highcharts-point"
              fill="var(--a-purple-400)"
              height="NaN"
              opacity="1"
              stroke="#ffffff"
              stroke-width="1"
              width="NaN"
              x="NaN"
              y="NaN"
            />
            <rect
              class="highcharts-point"
              fill="var(--a-purple-400)"
              height="NaN"
              opacity="1"
              stroke="#ffffff"
              stroke-width="1"
              width="NaN"
              x="NaN"
              y="NaN"
            />
            <rect
              class="highcharts-point"
              fill="var(--a-purple-400)"
              height="NaN"
              opacity="1"
              stroke="#ffffff"
              stroke-width="1"
              width="NaN"
              x="NaN"
              y="NaN"
            />
            <rect
              class="highcharts-point"
              fill="var(--a-purple-400)"
              height="NaN"
              opacity="1"
              stroke="#ffffff"
              stroke-width="1"
              width="NaN"
              x="NaN"
              y="NaN"
            />
            <rect
              class="highcharts-point"
              fill="var(--a-purple-400)"
              height="NaN"
              opacity="1"
              stroke="#ffffff"
              stroke-width="1"
              width="NaN"
              x="NaN"
              y="NaN"
            />
            <rect
              class="highcharts-point"
              fill="var(--a-purple-400)"
              height="NaN"
              opacity="1"
              stroke="#ffffff"
              stroke-width="1"
              width="NaN"
              x="NaN"
              y="NaN"
            />
          </g>
          <g
            class="highcharts-markers highcharts-series-1 highcharts-column-series"
            clip-path="none"
            data-z-index="0.1"
            opacity="1"
            transform="translate(NaN,10) scale(1 1)"
          />
          <g
            class="highcharts-series highcharts-series-2 highcharts-column-series highcharts-tracker"
            clip-path="url(#highcharts-du1dgep-8-)"
            data-z-index="0.1"
            opacity="1"
            transform="translate(NaN,10) scale(1 0.001)"
          >
            <rect
              class="highcharts-point"
              fill="var(--a-green-400)"
              height="NaN"
              opacity="1"
              stroke="#ffffff"
              stroke-width="1"
              width="NaN"
              x="NaN"
              y="NaN"
            />
            <rect
              class="highcharts-point"
              fill="var(--a-green-400)"
              height="NaN"
              opacity="1"
              stroke="#ffffff"
              stroke-width="1"
              width="NaN"
              x="NaN"
              y="NaN"
            />
            <rect
              class="highcharts-point"
              fill="var(--a-green-400)"
              height="NaN"
              opacity="1"
              stroke="#ffffff"
              stroke-width="1"
              width="NaN"
              x="NaN"
              y="NaN"
            />
            <rect
              class="highcharts-point"
              fill="var(--a-green-400)"
              height="NaN"
              opacity="1"
              stroke="#ffffff"
              stroke-width="1"
              width="NaN"
              x="NaN"
              y="NaN"
            />
            <rect
              class="highcharts-point"
              fill="var(--a-green-400)"
              height="NaN"
              opacity="1"
              stroke="#ffffff"
              stroke-width="1"
              width="NaN"
              x="NaN"
              y="NaN"
            />
            <rect
              class="highcharts-point"
              fill="var(--a-green-400)"
              height="NaN"
              opacity="1"
              stroke="#ffffff"
              stroke-width="1"
              width="NaN"
              x="NaN"
              y="NaN"
            />
          </g>
          <g
            class="highcharts-markers highcharts-series-2 highcharts-column-series"
            clip-path="none"
            data-z-index="0.1"
            opacity="1"
            transform="translate(NaN,10) scale(1 1)"
          />
          <g
            class="highcharts-series highcharts-series-3 highcharts-column-series highcharts-tracker"
            clip-path="url(#highcharts-du1dgep-8-)"
            data-z-index="0.1"
            opacity="1"
            transform="translate(NaN,10) scale(1 0.001)"
          >
            <rect
              class="highcharts-point"
              fill="var(--a-deepblue-500)"
              height="NaN"
              opacity="1"
              stroke="#ffffff"
              stroke-width="1"
              width="NaN"
              x="NaN"
              y="NaN"
            />
            <rect
              class="highcharts-point"
              fill="var(--a-deepblue-500)"
              height="NaN"
              opacity="1"
              stroke="#ffffff"
              stroke-width="1"
              width="NaN"
              x="NaN"
              y="NaN"
            />
            <rect
              class="highcharts-point"
              fill="var(--a-deepblue-500)"
              height="NaN"
              opacity="1"
              stroke="#ffffff"
              stroke-width="1"
              width="NaN"
              x="NaN"
              y="NaN"
            />
            <rect
              class="highcharts-point"
              fill="var(--a-deepblue-500)"
              height="NaN"
              opacity="1"
              stroke="#ffffff"
              stroke-width="1"
              width="NaN"
              x="NaN"
              y="NaN"
            />
            <rect
              class="highcharts-point"
              fill="var(--a-deepblue-500)"
              height="NaN"
              opacity="1"
              stroke="#ffffff"
              stroke-width="1"
              width="NaN"
              x="NaN"
              y="NaN"
            />
            <rect
              class="highcharts-point"
              fill="var(--a-deepblue-500)"
              height="NaN"
              opacity="1"
              stroke="#ffffff"
              stroke-width="1"
              width="NaN"
              x="NaN"
              y="NaN"
            />
          </g>
          <g
            class="highcharts-markers highcharts-series-3 highcharts-column-series"
            clip-path="none"
            data-z-index="0.1"
            opacity="1"
            transform="translate(NaN,10) scale(1 1)"
          />
        </g>
        <text
          class="highcharts-title"
          data-z-index="4"
          style="color: rgb(51, 51, 51); font-size: 18px; fill: #333333;"
          text-anchor="start"
          x="10"
          y="24"
        >
          Årlig pensjon hvis du starter uttak ved 72 år
        </text>
        <text
          class="highcharts-subtitle"
          data-z-index="4"
          style="color: rgb(102, 102, 102); fill: #666666;"
          text-anchor="middle"
          x="300"
          y="10"
        />
        <text
          class="highcharts-caption"
          data-z-index="4"
          style="color: rgb(102, 102, 102); fill: #666666;"
          text-anchor="start"
          x="10"
          y="397"
        />
        <g
          class="highcharts-legend highcharts-no-tooltip"
          data-z-index="7"
          transform="translate(300,359)"
        >
          <rect
            class="highcharts-legend-box"
            fill="none"
            height="8"
            rx="0"
            ry="0"
            stroke="#999999"
            stroke-width="0"
            width="8"
            x="0"
            y="0"
          />
          <g
            data-z-index="1"
          >
            <g>
              <g
                class="highcharts-legend-item highcharts-column-series highcharts-color-undefined highcharts-series-0"
                data-z-index="1"
                transform="translate(8,3)"
              >
                <text
                  data-z-index="2"
                  style="color: rgb(51, 51, 51); cursor: pointer; font-size: 12px; font-weight: bold; fill: #333333;"
                  text-anchor="start"
                  x="21"
                  y="15"
                >
                  Pensjonsgivende inntekt
                </text>
                <rect
                  class="highcharts-point"
                  data-z-index="3"
                  fill="#868F9C"
                  height="12"
                  rx="6"
                  ry="6"
                  width="12"
                  x="2"
                  y="4"
                />
              </g>
              <g
                class="highcharts-legend-item highcharts-column-series highcharts-color-undefined highcharts-series-1"
                data-z-index="1"
                transform="translate(NaN,3)"
              >
                <text
                  data-z-index="2"
                  style="color: rgb(51, 51, 51); cursor: pointer; font-size: 12px; font-weight: bold; fill: #333333;"
                  text-anchor="start"
                  x="21"
                  y="15"
                >
                  Avtalefestet pensjon (AFP)
                </text>
                <rect
                  class="highcharts-point"
                  data-z-index="3"
                  fill="var(--a-purple-400)"
                  height="12"
                  rx="6"
                  ry="6"
                  width="12"
                  x="2"
                  y="4"
                />
              </g>
              <g
                class="highcharts-legend-item highcharts-column-series highcharts-color-undefined highcharts-series-2"
                data-z-index="1"
                transform="translate(NaN,3)"
              >
                <text
                  data-z-index="2"
                  style="color: rgb(51, 51, 51); cursor: pointer; font-size: 12px; font-weight: bold; fill: #333333;"
                  text-anchor="start"
                  x="21"
                  y="15"
                >
                  Tjenestepensjon
                </text>
                <rect
                  class="highcharts-point"
                  data-z-index="3"
                  fill="var(--a-green-400)"
                  height="12"
                  rx="6"
                  ry="6"
                  width="12"
                  x="2"
                  y="4"
                />
              </g>
              <g
                class="highcharts-legend-item highcharts-column-series highcharts-color-undefined highcharts-series-3"
                data-z-index="1"
                transform="translate(NaN,3)"
              >
                <text
                  data-z-index="2"
                  style="color: rgb(51, 51, 51); cursor: pointer; font-size: 12px; font-weight: bold; fill: #333333;"
                  text-anchor="start"
                  x="21"
                  y="15"
                >
                  Folketrygden (NAV)
                </text>
                <rect
                  class="highcharts-point"
                  data-z-index="3"
                  fill="var(--a-deepblue-500)"
                  height="12"
                  rx="6"
                  ry="6"
                  width="12"
                  x="2"
                  y="4"
                />
              </g>
            </g>
          </g>
        </g>
        <g
          class="highcharts-axis-labels highcharts-xaxis-labels"
          data-z-index="7"
        >
          <text
            style="color: rgb(102, 102, 102); cursor: default; font-size: 11px; fill: #666666;"
            text-anchor="middle"
            transform="translate(0,0)"
            x="0"
          >
            71
          </text>
          <text
            style="color: rgb(102, 102, 102); cursor: default; font-size: 11px; fill: #666666;"
            text-anchor="middle"
            transform="translate(0,0)"
            x="0"
          >
            72
          </text>
          <text
            style="color: rgb(102, 102, 102); cursor: default; font-size: 11px; fill: #666666;"
            text-anchor="middle"
            transform="translate(0,0)"
            x="0"
          >
            73
          </text>
          <text
            style="color: rgb(102, 102, 102); cursor: default; font-size: 11px; fill: #666666;"
            text-anchor="middle"
            transform="translate(0,0)"
            x="0"
          >
            74
          </text>
          <text
            style="color: rgb(102, 102, 102); cursor: default; font-size: 11px; fill: #666666;"
            text-anchor="middle"
            transform="translate(0,0)"
            x="0"
          >
            75
          </text>
          <text
            style="color: rgb(102, 102, 102); cursor: default; font-size: 11px; fill: #666666;"
            text-anchor="middle"
            transform="translate(0,0)"
            x="0"
          >
            76
          </text>
        </g>
        <g
          class="highcharts-axis-labels highcharts-yaxis-labels"
          data-z-index="7"
        >
          <text
            style="color: rgb(102, 102, 102); cursor: default; font-size: 11px; fill: #666666;"
            text-anchor="end"
            transform="translate(0,0)"
            x="0"
          >
            0
          </text>
          <text
            style="color: rgb(102, 102, 102); cursor: default; font-size: 11px; fill: #666666;"
            text-anchor="end"
            transform="translate(0,0)"
            x="0"
          >
            100
          </text>
          <text
            style="color: rgb(102, 102, 102); cursor: default; font-size: 11px; fill: #666666;"
            text-anchor="end"
            transform="translate(0,0)"
            x="0"
          >
            200
          </text>
          <text
            style="color: rgb(102, 102, 102); cursor: default; font-size: 11px; fill: #666666;"
            text-anchor="end"
            transform="translate(0,0)"
            x="0"
          >
            300
          </text>
          <text
            style="color: rgb(102, 102, 102); cursor: default; font-size: 11px; fill: #666666;"
            text-anchor="end"
            transform="translate(0,0)"
            x="0"
          >
            400
          </text>
          <text
            style="color: rgb(102, 102, 102); cursor: default; font-size: 11px; fill: #666666;"
            text-anchor="end"
            transform="translate(0,0)"
            x="0"
          >
            500
          </text>
          <text
            style="color: rgb(102, 102, 102); cursor: default; font-size: 11px; fill: #666666;"
            text-anchor="end"
            transform="translate(0,0)"
            x="0"
          >
            600
          </text>
          <text
            style="color: rgb(102, 102, 102); cursor: default; font-size: 11px; fill: #666666;"
            text-anchor="end"
            transform="translate(0,0)"
            x="0"
          >
            700
          </text>
        </g>
        <text
          class="highcharts-credits"
          data-z-index="8"
          style="cursor: pointer; color: rgb(153, 153, 153); font-size: 9px; fill: #999999;"
          text-anchor="end"
          x="590"
          y="395"
        >
          Highcharts.com
        </text>
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TidligstMuligeUttak > viser feilmelding om henting av pensjonberegning feiler 1`] = `
<DocumentFragment>
  <div
    class="navds-alert navds-alert--error navds-alert--medium"
  >
    <svg
      aria-labelledby="title-r6"
      class="navds-alert__icon"
      fill="none"
      focusable="false"
      height="1em"
      role="img"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="title-r6"
      >
        Feil
      </title>
      <path
        clip-rule="evenodd"
        d="M0 11.976C.013 5.372 5.395 0 11.999 0 18.639.013 24.012 5.406 24 12.022 23.986 18.627 18.603 24 12 24h-.023a11.924 11.924 0 0 1-8.48-3.531A11.923 11.923 0 0 1 0 11.976Zm17-3.547L15.571 7 12 10.572 8.429 7 7 8.429 10.572 12 7 15.571 8.429 17 12 13.428 15.571 17 17 15.571 13.428 12 17 8.429Z"
        fill="#C30000"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="navds-alert__wrapper navds-body-long"
    >
      <h2
        class="navds-heading navds-heading--small navds-typo--spacing"
      >
        Vi klarte ikke å hente din tidligste mulige uttaksalder. Prøv igjen senere.
      </h2>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TidligstMuligeUttak > viser loading og deretter riktig header, tekst og knapper 1`] = `
<DocumentFragment>
  <p
    class="_paragraph_d3b588 navds-body-long"
  >
    Du kan tidligst ta ut alderspensjon når du er 62 år og 10 måneder. Hvis du går av senere, får du høyere pensjon i året.
  </p>
  <div
    class="navds-read-more navds-read-more--medium"
  >
    <button
      aria-expanded="false"
      class="navds-read-more__button navds-body-short"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="navds-read-more__expand-icon"
        fill="none"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M12 17.414 4.293 9.707l1.414-1.414L12 14.586l6.293-6.293 1.414 1.414L12 17.414Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="navds-read-more__expand-icon navds-read-more__expand-icon--filled"
        fill="none"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="m12 18.121-8.06-8.06 2.12-2.122L12 13.88l5.94-5.94 2.12 2.122L12 18.12Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      <span>
        Hva avgjør tidligste uttakstidspunkt?
      </span>
    </button>
    <div
      style="height: 0px; overflow: hidden;"
    >
      <div
        aria-hidden="true"
        style="display: none;"
      >
        <div
          class="navds-read-more__content navds-body-long"
        >
          //TODO
        </div>
      </div>
    </div>
  </div>
  <h2
    class="navds-heading navds-heading--xsmall"
  >
    Når vil du ta ut alderspensjon?
  </h2>
  <ul
    class="navds-chips _chipsWrapper_d3b588 _chipsWrapper__hasGap_d3b588 navds-chips--medium navds-body-short navds-body-short--small"
  >
    <li>
      <button
        aria-pressed="false"
        class="navds-chips__chip navds-chips__toggle"
      >
        <span
          class="navds-chips__chip-text"
        >
          62 år og 10 md.
        </span>
      </button>
    </li>
    <li>
      <button
        aria-pressed="false"
        class="navds-chips__chip navds-chips__toggle"
      >
        <span
          class="navds-chips__chip-text"
        >
          63 år
        </span>
      </button>
    </li>
    <li>
      <button
        aria-pressed="false"
        class="navds-chips__chip navds-chips__toggle"
      >
        <span
          class="navds-chips__chip-text"
        >
          64 år
        </span>
      </button>
    </li>
    <li>
      <button
        aria-pressed="false"
        class="navds-chips__chip navds-chips__toggle"
      >
        <span
          class="navds-chips__chip-text"
        >
          65 år
        </span>
      </button>
    </li>
    <li>
      <button
        aria-pressed="false"
        class="navds-chips__chip navds-chips__toggle"
      >
        <span
          class="navds-chips__chip-text"
        >
          66 år
        </span>
      </button>
    </li>
    <li>
      <button
        aria-pressed="false"
        class="navds-chips__chip navds-chips__toggle"
      >
        <span
          class="navds-chips__chip-text"
        >
          67 år
        </span>
      </button>
    </li>
  </ul>
  <div
    class="navds-read-more navds-read-more--medium navds-read-more--open"
  >
    <button
      aria-expanded="true"
      class="navds-read-more__button navds-body-short"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="navds-read-more__expand-icon"
        fill="none"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M12 17.414 4.293 9.707l1.414-1.414L12 14.586l6.293-6.293 1.414 1.414L12 17.414Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="navds-read-more__expand-icon navds-read-more__expand-icon--filled"
        fill="none"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="m12 18.121-8.06-8.06 2.12-2.122L12 13.88l5.94-5.94 2.12 2.122L12 18.12Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      <span>
        Vis flere aldere
      </span>
    </button>
    <div
      style="height: 0px; overflow: hidden; transition: height 250ms ease 0ms;"
    >
      <div
        aria-hidden="false"
        style=""
      >
        <div
          class="navds-read-more__content navds-body-long"
        >
          <ul
            class="navds-chips _chipsWrapper_d3b588 _chipsWrapper__hasGap_d3b588 navds-chips--medium navds-body-short navds-body-short--small"
          >
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  68 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  69 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  70 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  71 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  72 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  73 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  74 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  75 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  76 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  77 år
                </span>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
